크롤링 - API활용해보기
네이버 API활용해보기

--- a/Datacrawling/02_포털사이트.ipynb
+++ b/Datacrawling/02_포털사이트.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e865ac9e-798b-4481-b3b7-f7d97085246b",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d824222d-f5d7-4632-b1bd-bf608a09f0c8",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "545667e6-0f82-435b-9d99-1461f27af648",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a95acb7e-6bf5-43ba-810f-d8920e89ff95",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
        "'https://www.nate.com'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,24 +70,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d181119c-223e-4509-87a2-40ff31c6ac08",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<http.client.HTTPResponse at 0xffff967bc070>"
+       "<http.client.HTTPResponse at 0xffff416c34c0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "http.client.HTTPResponse"
+      ]
+     },
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "html = urlopen(url)\n",
-    "html"
+    "html\n",
+    "type(html)"
    ]
   },
   {
