크롤링-셀레니움
셀레니움 시작 1번째

--- a/Datacrawling/05_카카오geocode.ipynb
+++ b/Datacrawling/05_카카오geocode.ipynb
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "3df5ab5b",
    "metadata": {},
    "outputs": [],
@@ -86,31 +86,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "cfd30b42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "KAKAO_API_KEY = \"\" #카카오 restapi 키 등록"
+    "KAKAO_API_KEY = \"18b9e741e7c823f8ba016456591a5d00\" #카카오 restapi 키 등록"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "a286a299-2693-446e-8ce7-7f23d32df0fb",
    "metadata": {},
    "outputs": [],
    "source": [
     "## 카카오서버에 요청 후 응답받은 데이터를 반환하는 함수\n",
     "def json_request(url):\n",
-    "    headers = {'Authorization': 'KakaoAK {}'.format(KAKAO_API_KEY)}\n",
+    "    headers = {'Authorization': 'KakaoAK {}'.format(KAKAO_API_KEY)} # format함수: 파라미터를 대상{}안에 넣어라\n",
     "    res = requests.get(url, headers=headers)\n",
     "    return res.text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "9516a9a6-a12e-4508-b1d9-3e0f41f71348",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "c3a816a3-2115-4355-9f3c-c57264cc512a",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "(126.977829174031, 37.5663174209601)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
