크롤링 - 네이버API연습
네이버 API구조 파악

--- a/Datacrawling/04_네이버API.ipynb
+++ b/Datacrawling/04_네이버API.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "0d8c7968-1e3b-45aa-8841-8a1757d4f55d",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
     }
    ],
    "source": [
-    "# 네이버 검색 API 예제 - 블로그 검색\n",
+    "# 네이버 검색 API 예제 - 블로그 검색API\n",
     "import os\n",
     "import sys\n",
     "import urllib.request\n",
